--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,9 @@
-* {
-  font-family: Arial;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-img {
-  max-width: 100%; }
-
-body {
-  margin: 0;
-  padding: 0;
-  background: #fff; }
-
-ul {
-  margin: 0;
-  padding: 0; }
-
-li {
-  margin: 0;
-  padding: 0;
-  color: #4e4e4e; }
-
-p {
-  color: #4e4e4e; }
-
-h1 {
-  color: #4e4e4e; }
-
-h2 {
-  color: #4e4e4e; }
-
-h3 {
-  color: #4e4e4e; }
-
-h4 {
-  color: #4e4e4e; }
+.heading {
+  width: 30em;
+  float: right;
+  position: absolute;
+  top: 12em;
+  right: 4em; }
 
 .wrapper {
   width: 98%;
@@ -41,240 +11,390 @@ h4 {
   margin: 0 auto;
   padding: 0 2%; }
 
-header {
-  background: #e7e7e7;
-  padding: 2.5rem 0;
-  position: relative; }
-  header img {
-    position: absolute;
-    width: 25%;
-    top: 1.2rem;
-    left: 2.1rem;
-    margin-bottom: 0; }
-  header h1 {
-    margin: 0;
-    text-indent: -10000px;
-    background-position: center;
-    background-size: cover;
-    background-size: contain;
-    float: left; }
-  header nav {
-    float: right;
-    position: relative; }
-    header nav h2 {
-      line-height: 0;
-      margin: 0;
-      text-indent: -10000px; }
-    header nav ul {
-      margin: 0;
-      padding: 0; }
-    header nav li {
-      list-style-type: none;
-      float: left;
-      margin-left: 1.25rem;
-      margin-top: 0.625rem; }
-    header nav li.tw {
-      list-style-type: none;
-      float: left;
-      margin-left: 1.25rem;
-      margin-top: 0.625rem; }
-    header nav a {
-      text-decoration: none;
-      color: #29a29f; }
-  header:after {
-    display: block;
-    content: "";
-    clear: both; }
-
-.section-b {
-  padding-top: 1rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-  .section-b ul {
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-  .section-b li {
-    margin-bottom: 1em;
-    background: #fff;
-    color: #fff; }
-  .section-b p {
-    line-height: 1.5; }
-
-.card-content {
-  padding: 1.5em; }
-
-.card {
-  margin: 0 auto; }
+.preamble {
+  text-align: left;
+  font-size: 16px;
+  margin: 0 0 0 2em;
+  line-height: 2; }
 
 .container {
-  max-width: 1170px;
-  font-size: 0.7em; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 2em 2em 0 2em;
+  min-height: 100%;
+  position: relative; }
 
-.contact form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1.25rem; }
-  .contact form label {
-    display: block; }
-  .contact form .full {
-    grid-column: 1 / 3; }
-  .contact form button {
-    width: 100%;
-    padding: 1em;
-    border: 0.063rem dotted #29a29f;
-    background: #29a29f;
-    border: 0;
-    text-transform: uppercase;
-    color: #fff; }
-    .contact form button:hover {
-      background: #e7e7e7;
-      color: #333;
-      outline: 0;
-      -webkit-transition: background-color 0.5s ease-out;
-      -o-transition: background-color 0.5s ease-out;
-      transition: background-color 0.5s ease-out; }
-    .contact form button:focus {
-      background: #e7e7e7;
-      color: #333;
-      outline: 0;
-      -webkit-transition: background-color 0.5s ease-out;
-      -o-transition: background-color 0.5s ease-out;
-      transition: background-color 0.5s ease-out; }
-  .contact form input {
-    width: 100%;
-    padding: 1em;
-    border: 0.063rem dotted #4e4e4e;
-    background-color: #eeeeee; }
-  .contact form textarea {
-    width: 100%;
-    padding: 1em;
-    border: 0.063rem dotted #4e4e4e;
-    background-color: #eeeeee; }
-
-label {
-  text-align: left;
-  padding-bottom: 0.5rem;
-  font-size: 0.7rem; }
-
-footer {
-  background: #29a29f;
-  padding: 1rem 0;
-  position: relative;
-  height: 6rem; }
-  footer li {
+.contact-form {
+  margin-left: 2em; }
+  .contact-form input, .contact-form textarea {
+    background: #e8e8e8;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    width: 100%; }
+  .contact-form input {
+    height: 25px; }
+  .contact-form textarea {
+    height: 10em; }
+  .contact-form .row {
+    margin-bottom: 2em;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
-    color: #fff;
-    font-size: 0.875rem;
-    text-decoration: none;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    line-height: 1.5; }
-  footer .logos img {
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly; }
+  .contact-form label {
     position: absolute;
-    width: 8%;
-    top: 1.875rem;
-    right: 15rem;
-    visibility: hidden; }
-  footer .logos_2 img {
-    position: absolute;
-    width: 8%;
-    top: 2.063rem;
-    visibility: hidden; }
-  footer .logos_3 img {
-    position: absolute;
-    width: 8%;
-    top: 1.688rem;
-    visibility: hidden; }
-
-@media screen and (max-width: 768px) {
-  header nav {
-    float: none; }
-    header nav li {
-      margin-left: 0;
-      width: 16.66%;
-      text-align: center;
-      font-size: 0.875rem; }
-  header h1.logo {
-    float: none;
-    margin: 0 auto 3rem; } }
-
-@media screen and (max-width: 480px) {
-  header {
-    padding-bottom: 0; }
-    header nav {
-      background: #e7e7e7; }
-      header nav li {
-        float: none;
-        width: 100%;
-        margin: 0; }
-        header nav li a {
-          display: block;
-          text-align: center;
-          padding-top: 2rem;
-          color: #fff; }
-      header nav ul {
-        height: 0;
-        overflow: hidden;
-        background-color: #29a29f; }
-      header nav ul.open {
-        height: auto; }
-    header .wrapper {
-      padding: 0;
-      width: 100%; }
-    header img {
-      position: absolute;
-      width: 95%;
-      top: 1rem;
-      left: 0.6rem; }
-  #burger-nav {
-    background-color: #29a29f;
-    width: 100%;
-    height: 2.5rem;
-    background: url(../images/burger.png) no-repeat 97% center;
-    cursor: pointer; }
-  footer {
+    top: 50%;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
+    transition: .2s;
+    font-size: 12px; }
+  .contact-form .primary-button {
+    width: 50%;
+    height: 25px;
+    border-radius: 5px;
     background: #29a29f;
-    padding: 5rem 0;
-    position: relative;
-    height: 14.375rem; }
-    footer ul {
+    border: 0;
+    outline: none;
+    color: white;
+    font-size: 12px;
+    cursor: pointer; }
+    .contact-form .primary-button:hover {
+      background: #37dfdc; }
+
+.col-half {
+  position: relative;
+  width: 45%; }
+  .col-half label {
+    left: 6%;
+    -webkit-transform: translate(-6%, -50%);
+    -ms-transform: translate(-6%, -50%);
+    transform: translate(-6%, -50%); }
+  .col-half input:focus + label {
+    -webkit-transform: translate(-7%, -200%);
+    -ms-transform: translate(-7%, -200%);
+    transform: translate(-7%, -200%); }
+  .col-half input:valid + label {
+    -webkit-transform: translate(-7%, -200%);
+    -ms-transform: translate(-7%, -200%);
+    transform: translate(-7%, -200%); }
+
+.col-full {
+  position: relative;
+  width: 94%; }
+  .col-full label {
+    left: 0;
+    -webkit-transform: translate(6%, -50%);
+    -ms-transform: translate(6%, -50%);
+    transform: translate(6%, -50%); }
+  .col-full input:focus + label {
+    -webkit-transform: translate(6%, -200%);
+    -ms-transform: translate(6%, -200%);
+    transform: translate(6%, -200%); }
+  .col-full input:valid + label {
+    -webkit-transform: translate(6%, -200%);
+    -ms-transform: translate(6%, -200%);
+    transform: translate(6%, -200%); }
+
+.message-container label {
+  top: 12%; }
+
+.message-container textarea:focus + label {
+  -webkit-transform: translate(6%, -200%);
+  -ms-transform: translate(6%, -200%);
+  transform: translate(6%, -200%); }
+
+.message-container textarea:valid + label {
+  -webkit-transform: translate(6%, -200%);
+  -ms-transform: translate(6%, -200%);
+  transform: translate(6%, -200%); }
+
+@media (min-width: 320px) and (max-width: 550px) {
+  .contact-form {
+    margin-left: 0; } }
+
+* {
+  font-family: Arial;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  font: 100% Arial, sans-serif;
+  color: black;
+  background: #f7f7f7;
+  padding: 0;
+  margin: 0;
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 80px; }
+
+header {
+  min-height: 70px;
+  width: 100%; }
+
+.nav-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: space-evenly;
+  background-color: #c5c3c3;
+  height: 7em;
+  width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: -webkit-gradient(linear, left bottom, left top, from(#ccc), to(#fff));
+  background: -webkit-linear-gradient(bottom, #ccc, #fff);
+  background: -o-linear-gradient(bottom, #ccc, #fff);
+  background: linear-gradient(360deg, #ccc, #fff); }
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .nav .nav-link {
+    border-right: 1px solid #29a29f; }
+    .nav .nav-link:last-child {
+      border-right: none; }
+
+.social-media-links {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .social-media-links .social-media-link img {
+    max-height: 25px; }
+
+.logo {
+  max-height: 55px; }
+  .logo img {
+    float: left;
+    height: 4em;
+    width: 18em; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; }
+
+li a {
+  display: block;
+  color: #29a29f;
+  text-align: left;
+  margin: 0 0.875em 0 0.875em;
+  text-decoration: none; }
+  li a:hover {
+    background-color: black; }
+
+footer {
+  background: #29a29f;
+  width: 100%;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  height: 80px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly; }
+  footer .footer-links {
+    width: 100%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    font-size: 12px;
+    padding: 0 2em 0 2em; }
+    footer .footer-links .social-media-link {
+      display: none; }
+    footer .footer-links li {
+      text-align: center; }
+  footer ul {
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly; }
+
+.company {
+  max-height: 26em; }
+
+.mobile-nav {
+  display: none; }
+
+.menu-toggle {
+  display: none; }
+
+.footer-social-links {
+  display: none; }
+
+@media (max-width: 768px) {
+  .nav-bar .social-media-links {
+    display: none; }
+  footer {
+    font-size: 12px; }
+    footer .footer-links .social-media-link {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      footer .footer-links .social-media-link a img {
+        max-height: 25px; }
+  .company {
+    max-height: 20em;
+    max-width: 25em; } }
+
+@media (min-width: 320px) and (max-width: 550px) {
+  body {
+    padding-bottom: 180px; }
+  .preamble {
+    margin-top: 2em; }
+  footer {
+    bottom: auto;
+    height: 180px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    margin-top: 2em; }
+    footer .footer-links {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
-      flex-direction: column;
-      padding-top: 1rem; }
-    footer li {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      width: 100%;
-      color: #fff;
-      font-size: 0.875rem;
-      text-decoration: none;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      line-height: 1.5; }
-    footer .logos img {
-      position: absolute;
-      width: 8%;
-      top: 1.875rem;
-      right: 15rem;
-      visibility: visible; }
-    footer .logos_2 img {
-      position: absolute;
-      width: 8%;
-      top: 2.063rem;
-      right: 11.875rem;
-      visibility: visible; }
-    footer .logos_3 img {
-      position: absolute;
-      width: 8%;
-      top: 1.688rem;
-      right: 8.75rem;
-      visibility: visible; } }
+      flex-direction: column; }
+      footer .footer-links li {
+        margin-top: 2%; }
+      footer .footer-links .social-media-link {
+        display: none; }
+  .footer-social-links {
+    display: initial;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .footer-social-links img {
+      max-height: 25px; }
+    .footer-social-links li {
+      float: left; }
+  .nav {
+    display: none; }
+  .menu-toggle {
+    display: initial; }
+    .menu-toggle:focus + .mobile-nav {
+      display: initial; }
+  .menu-toggle {
+    width: 35px;
+    height: 35px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer; }
+  .menu-toggle span {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 100%;
+    background: #29a29f;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out; }
+  .menu-toggle span:nth-child(1) {
+    top: 0px; }
+  .menu-toggle span:nth-child(2), .menu-toggle span:nth-child(3) {
+    top: 12px; }
+  .menu-toggle span:nth-child(4) {
+    top: 24px; }
+  .menu-toggle.open span:nth-child(1) {
+    top: 12px;
+    width: 0%;
+    left: 50%; }
+  .menu-toggle.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  .menu-toggle.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+  .menu-toggle.open span:nth-child(4) {
+    top: 12px;
+    width: 0%;
+    left: 50%; }
+  .mobile-nav {
+    -webkit-transition: .2s ease-in;
+    -o-transition: .2s ease-in;
+    transition: .2s ease-in;
+    width: 100%;
+    height: 100%; }
+    .mobile-nav li {
+      background: #29a29f;
+      padding: 1em; }
+      .mobile-nav li a {
+        color: white;
+        text-align: center;
+        font-size: 1.2em; }
+    .mobile-nav.open {
+      display: initial; }
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: normal;
+    -ms-flex-align: normal;
+    align-items: normal; }
+    .container img {
+      width: 100%; } }
