--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,376 +1,335 @@
-//Variables
-
-$svart: #4e4e4e;
-$blue: #29a29f;
-$blackDark: #333;
-$white: #fff;
-$greyLight: #e7e7e7;
-$greySuperLight: #eeeeee;
+@import 'about';
+@import 'contact';
 
 
+$font-stack:    Arial, sans-serif;
+$primary-color: black;
 
 * {
-	font-family: Arial;
-	box-sizing: border-box;
+  font-family: Arial;
+  box-sizing: border-box;
 }
-img {
-	max-width: 100%;
-}
+
 body {
-	margin: 0;
-	padding: 0;
-	background: $white;
+  font: 100% $font-stack;
+  color: $primary-color;
+  background: #f7f7f7;
+  padding:0;
+  margin: 0;
+  margin:auto;
+  height:100%;
+  width:100%;
+  padding-bottom: 80px;
 }
+
+header{
+  min-height:70px;
+  width:100%;
+}
+
+.nav-bar {
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-pack: center;
+-ms-flex-pack: center;
+justify-content: space-evenly;
+background-color: #c5c3c3;
+height:7em;
+width:100%;
+align-items:center;
+background: linear-gradient(360deg, #ccc, #fff);
+}
+
+.nav{
+ display:flex;
+ align-items: center;
+ .nav-link {
+   border-right: 1px solid #29a29f;
+   &:last-child{
+     border-right: none;
+   }
+ }
+}
+
+.social-media-links{
+ align-items: center;
+   display: flex;
+ .social-media-link{
+   img{
+     max-height: 25px;
+   }
+ }
+}
+
+.logo{
+ max-height:55px;
+ img {
+   float:left;
+    height: 4em;
+    width: 18em;
+   }
+}
+
+
+
 ul {
-	margin: 0;
-	padding: 0;
-}
-li {
-	margin: 0;
-	padding: 0;
-	color: $svart;
-}
-p {
-	color: $svart;
-}
-h1 {
-	color: $svart;
-}
-h2 {
-	color: $svart;
-}
-h3 {
-	color: $svart;
-}
-h4 {
-	color: $svart;
-}
-.wrapper {
-	width: 98%;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0 2%;
-}//reset end
-
-
-
-header {
-	background: $greyLight;
-	padding: 2.5rem 0;
-	position: relative;
-	img {
-		position: absolute;
-		width: 25%;
-		top: 1.2rem;
-		left: 2.1rem;
-		margin-bottom: 0;
-	}
-	h1 {
-		margin: 0;
-		text-indent: -10000px;
-		background-position: center;
-		background-size: cover;
-		background-size: contain;
-		float: left;
-	}
-	nav {
-		float: right;
-		position: relative;
-		h2 {
-			line-height: 0;
-			margin: 0;
-			text-indent: -10000px;
-		}
-		ul {
-			margin: 0;
-			padding: 0;
-		}
-		li {
-			list-style-type: none;
-			float: left;
-			margin-left: 1.25rem;
-			margin-top: 0.625rem;
-		}
-		li.tw {
-			list-style-type: none;
-			float: left;
-			margin-left: 1.25rem;
-			margin-top: 0.625rem;
-		}
-		a {
-			text-decoration: none;
-			color: $blue;
-		}
-	}
-	&:after {
-		display: block;
-		content: "";
-		clear: both;
-	}
-}//header end
-
-
-
-.section-b {
-	padding-top: 1rem;
-	box-sizing: border-box;
-	ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
-	li {
-		margin-bottom: 1em;
-		background: $white;
-		color: $white;
-	}
-    p{
-        line-height: 1.5;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+ }
+ 
+ li {
+  a {
+   display: block;
+   color: #29a29f;
+   text-align: left;
+   margin: 0 0.875em 0 0.875em;
+   text-decoration: none;
+   &:hover {
+     background-color: black;
     }
-}//.section-b end
+  }
+ }
+ 
+ 
+ footer 
+ { 
+   background: #29a29f;
+   width: 100%;
+   color: white;
+   position: absolute;
+   bottom: 0;
+   height:80px;
+   align-items:center;
+   display:flex;
+   justify-content: space-evenly;
+   .footer-links
+   {
+     width:100%;
+     align-items: center;
+     display: flex;
+     justify-content: space-evenly;
+     font-size: 12px;
+     padding: 0 2em 0 2em;
+     .social-media-link{
+       display:none;
+     }
+     li{
+       text-align:center;
+     }
+   }
+ 
+   ul{
+     justify-content: space-evenly;
+   }
+ }
 
 
 
-.card-content {
-	padding: 1.5em;
+
+.company {
+  max-height:26em;
+  }
+
+
+  .mobile-nav{
+    display:none;
+  }
+
+  .menu-toggle{
+    display:none;
+  }
+
+  .footer-social-links{
+    display: none;
+  }
+
+
+@media (max-width: 768px){
+
+  .nav-bar{
+    .social-media-links{
+      display:none;
+    }
+  }
+
+  footer{
+    font-size: 12px;
+
+    .footer-links{
+      .social-media-link{
+        align-items: center;
+        display: flex;
+        a{
+          img{
+            max-height: 25px;
+          }  
+        } 
+      }
+    }
+  }
+
+  .company{
+    max-height: 20em;
+    max-width: 25em;
+  }
 }
 
 
 
 
-.card {
-	margin: 0 auto;
-}//.card end
+@media (min-width: 320px) and (max-width: 550px)
+{
+  body{
+    padding-bottom: 180px;
+  }
 
+  .preamble{
+    margin-top: 2em;
+  }
+  footer{
+    bottom: auto;
+    height:180px;
+    flex-direction: column-reverse;
+    margin-top: 2em;
+    .footer-links{
+      flex-direction: column;
+      li{
+        margin-top:2%;
+      }      
+      .social-media-link{
+        display:none;
+      }
+    }
+  }
 
+  .footer-social-links{
+    display: initial;
+    justify-content: space-evenly;
+    align-items: center;
+    img{
+      max-height: 25px;
+    }
 
+    li{
+      float:left;
+    }
+  }
+  .nav{
+    display: none;
+  }
+  .menu-toggle{
+    display: initial;
 
-.container {
-	max-width: 1170px;
-	font-size: 0.7em;
-}
+    &:focus + .mobile-nav{
+      display:initial;
+    }
 
-.contact {
-	form {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-gap: 1.25rem;
-		label {
-			display: block;
-		}
-		.full {
-			grid-column: 1 / 3;
-		}
-		button {
-			width: 100%;
-			padding: 1em;
-			border: 0.063rem dotted $blue;
-			background: $blue;
-			border: 0;
-			text-transform: uppercase;
-			color: $white;
-			&:hover {
-				background: $greyLight;
-				color: $blackDark;
-				outline: 0;
-				transition: background-color 0.5s ease-out;
-			}
-			&:focus {
-				background: $greyLight;
-				color: $blackDark;
-				outline: 0;
-				transition: background-color 0.5s ease-out;
-			}
-		}
-		input {
-			width: 100%;
-			padding: 1em;
-			border: 0.063rem dotted $svart;
-            background-color: $greySuperLight;
-		}
-		textarea {
-			width: 100%;
-			padding: 1em;
-			border: 0.063rem dotted $svart;
-            background-color: $greySuperLight;
-		}
-	}
-}//.contact end
+  }
 
-
-
-label {
-	text-align: left;
-	padding-bottom: 0.5rem;
-	font-size: 0.7rem;
-}
-
-
-
-footer {
-	background: $blue;
-	padding: 1rem 0;
-	position: relative;
-	height: 6rem;
-	li {
-		display: flex;
-		width: 100%;
-		color: $white;
-		font-size: 0.875rem;
-		text-decoration: none;
-		justify-content: center;
-		line-height: 1.5;
-	}
-	.logos {
-		img {
-			position: absolute;
-			width: 8%;
-			top: 1.875rem;
-			right: 15rem;
-			visibility: hidden;
-		}
-	}
-	.logos_2 {
-		img {
-			position: absolute;
-			width: 8%;
-			top: 2.063rem;
-			visibility: hidden;
-		}
-	}
-	.logos_3 {
-		img {
-			position: absolute;
-			width: 8%;
-			top: 1.688rem;
-			visibility: hidden;
-		}
-	}
-}// footer end
-
-
-@media screen and (max-width: 960px){
-    
-}
-
-
-
-@media screen and (max-width: 768px) {
-	header {
-		nav {
-			float: none;
-			li {
-				margin-left: 0;
-				width: 16.66%;
-				text-align: center;
-				font-size: 0.875rem;
-			}
-		}
-		h1.logo {
-			float: none;
-			margin: 0 auto 3rem;
-		}
-	}
-}
-
-
-
-
-@media screen and (max-width: 480px) {
-	header {
-		nav {
-			li {
-				float: none;
-				width: 100%;
-				margin: 0;
-				a {
-					display: block;
-					text-align: center;
-					padding-top: 2rem;
-					color: $white;
-				}
-			}
-			background: $greyLight;
-			ul {
-				height: 0;
-				overflow: hidden;
-				background-color: $blue;
-			}
-			ul.open {
-				height: auto;
-			}
-		}
-		.wrapper {
-			padding: 0;
-			width: 100%;
-		}
-		padding-bottom: 0;
-		img {
-			position: absolute;
-			width: 95%;
-			top: 1rem;
-			left: 0.6rem;
-		}
-	}
-    
-
-    
-	#burger-nav {
-		background-color: $blue;
-		width: 100%;
-		height: 2.5rem;
-		background: url(../images/burger.png) no-repeat 97% center;
-		cursor: pointer;
-	}
-    
-    
   
-    
-	footer {
-		background: $blue;
-		padding: 5rem 0;
-		position: relative;
-		height: 14.375rem;
-		ul {
-			flex-direction: column;
-			padding-top: 1rem;
-		}
-		li {
-			display: flex;
-			width: 100%;
-			color: $white;
-			font-size: 0.875rem;
-			text-decoration: none;
-			justify-content: center;
-			line-height: 1.5;
-		}
-		.logos {
-			img {
-				position: absolute;
-				width: 8%;
-				top: 1.875rem;
-				right: 15rem;
-				visibility: visible;
-			}
-		}
-		.logos_2 {
-			img {
-				position: absolute;
-				width: 8%;
-				top: 2.063rem;
-				right: 11.875rem;
-				visibility: visible;
-			}
-		}
-		.logos_3 {
-			img {
-				position: absolute;
-				width: 8%;
-				top: 1.688rem;
-				right: 8.75rem;
-				visibility: visible;
-			}
-		}
-	}
+
+.menu-toggle {
+  width: 35px;
+  height: 35px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+.menu-toggle span {
+  display: block;
+  position: absolute;
+  height: 9px;
+  width: 100%;
+  background: #29a29f;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.menu-toggle span:nth-child(1) {
+  top: 0px;
+}
+
+.menu-toggle span:nth-child(2),.menu-toggle span:nth-child(3) {
+  top: 12px;
+}
+
+.menu-toggle span:nth-child(4) {
+  top: 24px;
+}
+
+.menu-toggle.open span:nth-child(1) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
+}
+
+.menu-toggle.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.menu-toggle.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.menu-toggle.open span:nth-child(4) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
+}
+
+
+  .mobile-nav{
+    transition: .2s ease-in;
+    width: 100%;
+    height: 100%;
+    li{
+    background: #29a29f;
+    padding: 1em;      
+      a{
+        color: white;
+        text-align:center;
+        font-size: 1.2em;
+      }
+    }
+    &.open{
+      display: initial;
+    }
+  }
+
+  .container{
+    flex-direction:column;
+    display:flex;
+    align-items: normal;
+
+    img{
+      width: 100%;
+    }
+  }
 }
 
